# paperflow

./: .gitignore  CHANGELOG.md  PaperFlow.spec  README.md  README_EN.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml  windows-release.yml
docs/: DEVELOPMENT.md  DEVELOPMENT_EN.md  MINERU.md  MINERU_EN.md  TECHNICAL.md  TECHNICAL_EN.md
installer/: PaperFlow.iss  version_info.txt
scripts/: build_windows.ps1  generate_icon.ps1
src/paperflow/: __init__.py  desktop.py  documents.py  mineru_runtime.py  security.py  webapp.py
src/paperflow/static/: chat.html  index.html
tests/: test_desktop.py  test_documents.py  test_mineru_runtime.py  test_webapp.py
