[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[project]
name = "paperflow"
version = "0.1.1"
description = "A private, local-first arXiv paper recommendation application."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-or-later" }
keywords = ["arxiv", "papers", "recommendation", "research", "desktop"]
dependencies = [
    "arxiv>=2.4.0",
    "cryptography>=45.0.0",
    "httpx>=0.28.1",
    "numpy>=2.3.0",
    "openai>=2.24.0",
    "scikit-learn>=1.7.1",
    "pymupdf4llm>=0.3.4",
]

[project.optional-dependencies]
desktop = [
    "pymupdf-layout>=1.27.1; sys_platform == 'win32'",
    "pywebview>=6.1; sys_platform == 'win32'",
]

[project.scripts]
paperflow = "paperflow.webapp:main"
paperflow-desktop = "paperflow.desktop:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0",
    "pyinstaller>=6.18.0; sys_platform == 'win32'",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
